// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CancelAuthorizationButton should be disabled when requesting is true 1`] = `
<div>
  <button
    class="components-button is-next-40px-default-size is-small"
    disabled=""
    type="button"
  >
    Cancel
  </button>
</div>
`;

exports[`CancelAuthorizationButton should render normal status 1`] = `
<div>
  <button
    class="components-button is-next-40px-default-size is-destructive"
    type="button"
  >
    Cancel
  </button>
</div>
`;

exports[`CancelAuthorizationButton should transition to busy state when clicked 1`] = `
<div>
  <button
    class="components-button is-next-40px-default-size is-busy is-destructive"
    disabled=""
    type="button"
  >
    Cancel
  </button>
</div>
`;
